tests/compile/schema_types.stderr
error[E0277]: the trait bound `bool: rust_query::hash::ValidInSchema<v0::Schema>` is not satisfied
 --> tests/compile/schema_types.rs:6:18
  |
6 |         my_bool: bool,
  |                  ^^^^ the trait `rust_query::hash::ValidInSchema<v0::Schema>` is not implemented for `bool`
  |
  = help: the following other types implement trait `rust_query::hash::ValidInSchema<S>`:
            Option<T>
            String
            f64
            i64
note: required by a bound in `TypBuilder::<S>::col`
 --> src/hash.rs
  |
  |     pub fn col<T: ValidInSchema<S>>(&mut self, name: &'static str) {
  |                   ^^^^^^^^^^^^^^^^ required by this bound in `TypBuilder::<S>::col`

error[E0277]: the trait bound `Option<Option<i64>>: rust_query::hash::ValidInSchema<v0::Schema>` is not satisfied
 --> tests/compile/schema_types.rs:7:17
  |
3 | #[schema]
  | --------- required by a bound introduced by this call
...
7 |         nested: Option<Option<i64>>,
  |                 ^^^^^^^^^^^^^^^^^^^ the trait `rust_query::hash::ValidInSchema<v0::Schema>` is not implemented for `Option<Option<i64>>`
  |
  = help: the trait `rust_query::hash::ValidInSchema<S>` is implemented for `Option<T>`
note: required by a bound in `TypBuilder::<S>::col`
 --> src/hash.rs
  |
  |     pub fn col<T: ValidInSchema<S>>(&mut self, name: &'static str) {
  |                   ^^^^^^^^^^^^^^^^ required by this bound in `TypBuilder::<S>::col`

error[E0277]: the trait bound `Option<i64>: rust_query::value::EqTyp` is not satisfied
 --> tests/compile/schema_types.rs:9:19
  |
9 |         optional: Option<i64>,
  |                   ^^^^^^^^^^^ the trait `rust_query::value::EqTyp` is not implemented for `Option<i64>`
  |
  = help: the following other types implement trait `rust_query::value::EqTyp`:
            String
            bool
            f64
            i64
note: required by a bound in `TypBuilder::<S>::check_unique_compatible`
 --> src/hash.rs
  |
  |     pub fn check_unique_compatible<T: EqTyp>(&mut self) {}
  |                                       ^^^^^ required by this bound in `TypBuilder::<S>::check_unique_compatible`
